css: quick fix header width overflowing when the page was too long

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2,6 +2,7 @@ body {
   background-color: #f9f9f9;
   height: auto;
   font-family: "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
+  width: 100%
 }
 
 .header > div {
@@ -10,7 +11,7 @@ body {
 }
 
 .header {
-  width: 100vw;
+  width: 100%;
   height: 3.75rem;
   background-color: #111;
   display: flex;
